# ASOC-investigator

./: .env.example  README.md  pyproject.toml
docs/: ARCHITECTURE.md
frontend/: package-lock.json
frontend/app/: layout.tsx  page.tsx
frontend/components/: InvestigationForm.tsx  ProgressLog.tsx  ReportView.tsx
frontend/lib/: api.ts  sampleLogs.ts  sse.ts  types.ts
scripts/: smoke_test_graph_compile.py  smoke_test_masking.py  smoke_test_rag.py  smoke_test_tools.py
src/asoc_investigator/: cli.py
src/asoc_investigator/agents/: __init__.py  investigator.py  judge.py  supervisor.py
src/asoc_investigator/api/: app.py  streaming.py
src/asoc_investigator/graph/: __init__.py  build.py  state.py
src/asoc_investigator/masking/: __init__.py  engine.py  entities.py
src/asoc_investigator/rag/: __init__.py  embeddings.py  schema.sql  store.py
src/asoc_investigator/tools/: __init__.py  base.py  registry.py  sandbox.py  threat_intel.py
