[project]
name = "asoc-investigator"
version = "0.1.0"
description = "Multi-agent security investigation assistant with PII-safe tool use and LLM-as-judge evaluation."
requires-python = ">=3.11"
dependencies = [
    "langchain-openai>=0.2.0",
    "langchain-google-genai>=2.0.0",
    "langgraph>=0.2.0",
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.1",
    "supabase>=2.9.0",
    "rich>=13.7.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[project.scripts]
asoc-investigate = "asoc_investigator.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=68.0.0"]
build-backend = "setuptools.build_meta"
